Combat rewritten along with death initial support